# reccmp

./: .gitignore  pyproject.toml  requirements-tests.txt  requirements.txt
.github/workflows/: unittest-ghidra.yml
reccmp/: types.py
reccmp/analysis/: float_const.py  funcinfo.py  imports.py  vtordisp.py
reccmp/compare/: core.py
reccmp/compare/asm/: parse.py
reccmp/formats/: elf.py  image.py  lx.py  macho.py  mz.py  ne.py  pe.py
reccmp/ghidra/importer/: pdb_extraction.py
reccmp/tools/: asmcmp.py  roadmap.py
tests/: raw_image.py
