[project]
name = "reccmp"
description = "Collection of decompilation tools."
license-files = ["COPYING", "reccmp/bin/LICENSE*.txt"]
readme = "docs/intro.md"
dynamic = ["classifiers", "dependencies", "license", "scripts", "version"]
requires-python = ">= 3.10"

[flake8]
max-line-length = 120


[tool.mypy]
check_untyped_defs = true

[tool.pytest.ini_options]
# The default `.pytest_cache` path is rejected by Ghidra 12.1.
cache_dir="pytest_cache"
xfail_strict=true